--- a/releaselibrary/build.gradle
+++ b/releaselibrary/build.gradle
@@ -1,7 +1,10 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.adcTool'
 
 android {
     compileSdkVersion 26
+
 
 
     defaultConfig {
@@ -12,28 +15,12 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        ndk {
-            abiFilters "armeabi-v7a" // DO NOT MODIFY THIS LINE, IT'S UPDATED BY BUILD MACHINE AUTOMATICALLY.
-        }
-        packagingOptions {
-            doNotStrip '*/mips/*.so'
-            doNotStrip '*/mips64/*.so'
-        }
-
-
     }
-
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-    externalNativeBuild {
-        cmake {
-            // path "../../../media_sdk3/proj.cmake/CMakeLists.txt"
-            path "src/main/cpp/CMakeLists.txt"
         }
     }
 
