--- a/javalibrary/build.gradle
+++ b/javalibrary/build.gradle
@@ -1,5 +1,10 @@
 apply plugin: 'com.android.library'
 
+
+def getProductName() {
+    return "adcToolJava"//这里是你自定义的名称
+}
+
 android {
     compileSdkVersion 26
 
@@ -9,11 +14,18 @@ android {
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.2"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
+
+    android.libraryVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = getProductName() + "_${defaultConfig.versionName}" + '.aar'
+        }
+    }
+
 
     buildTypes {
         release {
