--- a/releaselibrary/build.gradle
+++ b/releaselibrary/build.gradle
@@ -24,11 +24,18 @@ android {
         }
     }
 
+    repositories {
+        flatDir {
+            dirs 'libs'   // aar目录
+        }
+    }
+
 }
 
 dependencies {
+    compile(name: 'adcToolCpp_1.0.2', ext: 'aar')
+    compile(name: 'adcToolJava_1.0.2', ext: 'aar')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
