--- a/javalibrary/build.gradle
+++ b/javalibrary/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.library'
 
+def getProductName() {
+    return "$javaToolName" //这里是你自定义的名称
+}
 android {
     compileSdkVersion 26
 
@@ -9,18 +12,20 @@ android {
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName "$appVersion"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
             abiFilters "armeabi-v7a" // DO NOT MODIFY THIS LINE, IT'S UPDATED BY BUILD MACHINE AUTOMATICALLY.
         }
 
-        packagingOptions {
-            doNotStrip '*/mips/*.so'
-            doNotStrip '*/mips64/*.so'
-        }
 
+    }
+
+    android.libraryVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = getProductName() + "_${defaultConfig.versionName}" + '.aar'
+        }
     }
 
     buildTypes {
