--- a/releaselibrary/build.gradle
+++ b/releaselibrary/build.gradle
@@ -34,9 +34,11 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    //compile(name: "$cppToolName" + "_" + "$appVersion", ext: 'aar')
-    //compile(name: "$javaToolName" + "_" + "$appVersion", ext: 'aar')
+    implementation(name: "$cppToolName" + "_" + "$appVersion", ext: 'aar')
+    implementation(name: "$javaToolName" + "_" + "$appVersion", ext: 'aar')
 
+    //implementation(name: "adcToolCpp_1.1.0", ext: 'aar')
+    //implementation(name: "adcToolJava_1.1.0", ext: 'aar')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
