--- a/cpplibrary/src/main/cpp/CMakeLists.txt
+++ b/cpplibrary/src/main/cpp/CMakeLists.txt
@@ -16,9 +16,9 @@ set(SRCPATH ${CMAKE_CURRENT_SOURCE_DIR})
 message("${CMAKE_CURRENT_SOURCE_DIR}")
 message("${SRCPATH}")
 
-include_directories("${SRCPATH}/libyuvWrap/include")
+#include_directories("${SRCPATH}/libyuvWrap/include")
 include_directories("${SRCPATH}/libyuvWrap")
-include_directories("${SRCPATH}/libyuvJNI")
+#include_directories("${SRCPATH}/libyuvJNI")
 set(TARGET_NAME ${PROJECT_NAME})
 message("target name ${TARGET_NAME}")
 set (PUBLIC_YUV_LIBS ${SRCPATH}/libyuvWrap/${ANDROID_ABI}/libyuv.a)
@@ -36,7 +36,7 @@ message("SRC_PATH ${SRC_PATH}")
 set(COMMON_PATH ${SRC_PATH}/libyuvWrap)
 message("COMMON_PATH ${COMMON_PATH}")
 set(SOURCES
-	${SRC_PATH}/libyuvJNI/libyuvJni.cpp
+	${COMMON_PATH}/libyuvJni.cpp
 	${COMMON_PATH}/libyuvWrap.cpp
 )
 
