--- a/releaselibrary/build.gradle
+++ b/releaselibrary/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
-/*apply plugin: 'com.github.dcendents.android-maven'
-group = 'com.github.adcTool'*/
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.adcTool'
 
 android {
     compileSdkVersion 26
