--- a/cpplibrary/build.gradle
+++ b/cpplibrary/build.gradle
@@ -18,7 +18,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         ndk {
-            abiFilters "armeabi-v7a"
+            abiFilters "armeabi-v7a","x86","arm64-v8a"
             // DO NOT MODIFY THIS LINE, IT'S UPDATED BY BUILD MACHINE AUTOMATICALLY.
         }
 
@@ -39,7 +39,6 @@ android {
     }
     externalNativeBuild {
         cmake {
-            // path "../../../media_sdk3/proj.cmake/CMakeLists.txt"
             path "src/main/cpp/CMakeLists.txt"
         }
     }
